# Heterogenous-Robotics

./: README.md
DRL_robot_navigation_ros2/src/: Camera_test.webm
DRL_robot_navigation_ros2/src/td3/: CMakeLists.txt  package.xml
DRL_robot_navigation_ros2/src/td3/launch/: model_state_checker.launch.py  pioneer3dx.rviz  pioneer3dx_combined.rviz  robot_state_publisher.launch.py  robot_state_publisher_combined.launch.py  test.launch.py  test_combined_simulation.launch.py  test_simulation.launch.py  test_vint_simulation.launch.py  train_multi_experiments_simulation.launch.py  train_multi_experiments_vint_simulation.launch.py  train_simulation.launch.py  train_vint_simulation.launch.py
DRL_robot_navigation_ros2/src/td3/scripts/: combined_test_node.py  combined_test_velodyne_node.py  combined_vint_test_node.py  generate_plots.py  model_state_checker.py  npy to json converter.py  plot_velodyne_accuracies.py  plot_vint_accuracies.py  point_cloud2.py  replay_buffer.py  td3_velodyne_actor.pth  test_velodyne_node.py  train_velodyne_node.py  train_velodyne_node_multiple_experiments.py  train_velodyne_node_revA.py  velodyne_box_test_node.py  velodyne_comparison_table.py  vint_comparison_table.py  vint_test_node.py  vint_train_node.py  vint_train_node_multiple_experiments.py
DRL_robot_navigation_ros2/src/td3/scripts/json_configs/: experiments.json  vint_experiments.json
DRL_robot_navigation_ros2/src/td3/urdf/: combined_td_robot.urdf
DRL_robot_navigation_ros2/src/td3/worlds/: <!-- Define walls for the room -->.xml  hcr.world  hcr_combined.world  hcr_vint.world
(+314 files in other folders)
